labopenshift2-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: labopenshift2
  name: labopenshift2
  namespace: labopenshift2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labopenshift2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: labopenshift2
    spec:
      containers:
        - image: hub.docker.com/thibex/labopenshift2:2.0
        name: labopenshift2
---
