labopenshift2-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: labopenshift2
  name: labopenshift2
  namespace: labopenshift2
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: labopenshift2
    weight: 100
